--- a/MovieSearch/Base.lproj/Main.storyboard
+++ b/MovieSearch/Base.lproj/Main.storyboard
@@ -47,7 +47,7 @@
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="u4s-bQ-7FO">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="u4s-bQ-7FO">
                                                     <rect key="frame" x="0.0" y="200" width="600" height="128"/>
                                                 </imageView>
                                             </subviews>
@@ -61,6 +61,7 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="postImageView" destination="u4s-bQ-7FO" id="dEC-dE-Nwt"/>
                                     <outlet property="ratingLabel" destination="uh9-fA-XLK" id="mDl-UE-QuK"/>
                                     <outlet property="summaryLabel" destination="pH3-cv-aNf" id="KdP-gm-oC0"/>
                                     <outlet property="titleLabel" destination="HHj-ce-mw1" id="ydS-oA-9oP"/>
